# rustplayground

./: .gitignore  Cargo.toml  Makefile.toml  README.md  dev  foo.txt  rust-toolchain  rustfmt.toml  test.txt  test1.txt  test2.txt  test3.txt  test4.txt
.cargo/: config.toml
.config/: nextest.toml
.github/: codecov.yml
.github/workflows/: check.yml  dependency-review.yml  safety.yml  scheduled.yml  scorecards.yml  test.yml
collections/src/: main.rs
error/src/: main.rs
generic/src/: main.rs
guessing_game/src/: main.rs
hello-cargo/: Cargo.toml
hello-cargo/src/: main.rs
hello_cargo/: Cargo.toml
hello_world/: main
minigrep/: output.txt
minigrep/src/: lib.rs  main.rs
src/: hello.rs  iter_files.rs  lib.rs  main.rs  panic_hook.rs  thread_pool.rs
threads/: Cargo.toml
threads/src/: main.rs
variables/src/: main.rs
