[package]
name = "rust-init"
version = "0.1.0"
authors = ["ben1009"]
edition = "2021"

[[bin]]
name = "dial9_demo"
required-features = ["dial9"]

[features]
default = []
dial9 = ["dep:dial9-tokio-telemetry"]

[dependencies]
await-tree = "0.2.1"
backtrace = "0.3"
color-backtrace = { version = "0.6" }
ctor = "0.2.9"
dial9-tokio-telemetry = { version = "0.2", optional = true }
tokio = { version = "1", features = ["full"] }
