[package]
name = "rust-init"
version = "0.1.0"
authors = ["ben1009"]
edition = "2021"

[[bin]]
name = "dial9_demo"
required-features = ["dial9"]

# [features]
# default = []
# dial9 = ["dep:dial9-tokio-telemetry"]

[dependencies]
await-tree = "0.3.1"
backtrace = "0.3"
color-backtrace = "0.7.2"
ctor = "0.6.3"
dial9-tokio-telemetry = "0.2"
tokio = { version = "1", features = ["full"] }
